# Meltrix

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  index.html
.github/workflows/: CMakeBuild.yml  DoxygenDeploy.yml
docs/: Doxyfile
docs/doxygen-awesome-css/: header.html
include/meltrix/: Base.h  Vector.h  meltrix.h
src/: Base.cpp  Vector.cpp  meltrix.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
unit_tests/: CMakeLists.txt  VectorTests.cpp  main.cpp
